# storycraftr-next

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT_ECOSYSTEM_INVENTORY.md  Makefile  PHASES_2B_TO_5_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  pyproject.toml  release_notes.md  rerun_smoke_only_storycraftr.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: agent-governance-reviewer.agent.md  blueprint-mode-codex.agent.md  code-tour.agent.md  context-architect.agent.md  context7.agent.md  documentation-writer.agent.md  dynatrace-expert.agent.md  elasticsearch-observability.agent.md  gem-planner.agent.md  (+11 more)
The Sleepers’ Code/: storycraftr.json
docs/: CHANGE_IMPACT_CHECKLIST.md  Complete StoryCraftr-Next Awesome Copilot Inventory.txt  StoryCraftr-Next Complete Architecture & Technical Reference.md  advanced.md  architecture-onboarding.md  chat.md  component_inventory.md  contributor-reference.md  dsvl-phase-1-complete-summary.md  dsvl-phase-1a-completion-report.md  getting_started.md  index.html  iterate.md  langchain-refactor-plan.md  python-3.13-full-stack-upgrade-matrix.md  storycraftr-next_Architecture Overview.txt
examples/: papercraftr_example_usage.sh  rankings_stress_weak_primary.json  storycraftr_example_usage.sh
scripts/: bump-version.sh  check-version-bump.sh  dev_commit.sh
src/: event-contract.test.ts  event-contract.ts  extension.ts
storycraftr/: cli.py  init.py
test_book/: test.md.back
tests/: test_cli.py  test_markdown.py
(+134 files in other folders)
