[tool.poetry]
name = "storycraftr"
version = "0.16.0-dev"
description = "A CLI tool for writing books and research papers using LangChain-compatible LLM providers."
authors = ["Rodrigo Estrada <rodrigo.estrada@gmail.com>"]
license = "MIT"
readme = "README.md"
include = [
    "docs/getting_started.md",
    "docs/iterate.md",
    "docs/chat.md"
]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
click = ">=8.1"
markdown = ">=3.7"
pandoc = ">=2.4"
rich = ">=13.9.2"
python-dotenv = ">=1.0.1"
pyyaml = ">=6.0.2"
requests = ">=2.32.3"
keyring = ">=25.6.0"
prompt-toolkit = ">=3.0.48"
langchain = ">=0.3.7"
langchain-core = ">=0.3.15"
langchain-community = ">=0.3.6"
langchain-openai = ">=0.3.0"
langchain-huggingface = ">=0.3.1"
langchain-chroma = ">=0.2.6"
langchain-text-splitters = ">=0.3.0"
chromadb = ">=1.0.0"
huggingface-hub = ">=0.30.0"
markdown-pdf = "^1.10"
textual = "^8.0.2"

[tool.poetry.scripts]
storycraftr = "storycraftr.cli:cli"
papercraftr = "storycraftr.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.4"
ipdb = ">=0.13.13"
black = "^26.1.0"
pre-commit = ">=4.0.1"
sphinx = ">=8.1.3"
sphinx-click = ">=6.0.0"

[tool.poetry.group.embeddings]
optional = true

[tool.poetry.group.embeddings.dependencies]
sentence-transformers = ">=3.0.0"
torch = ">=2.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.black]
line-length = 88
target-version = ["py312"]
